# minima

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.md
docs/br/: api-reference.md  getting-started.md  index.md  token-economics-hypothesis.md
docs/en/: api-reference.md  getting-started.md  index.md  token-economics-hypothesis.md
engine/: context.py  controller.py
input/: keyboard.py  mouse.py
logs/: logger_utils.py
minima/engine/: context.py  controller.py
minima/input/: mouse.py
minima/logs/: logger_utils.py
minima/settings/: exceptions.py
minima/tests/: unit_tests.py
minima/tests/code_examples/: playground.py
minima/ui/: browser.py  button.py  dropdown.py  file_manager.py  image.py  input_field.py  text.py  ui_element.py
pyminima/engine/: context.py  controller.py
pyminima/logs/: logger_utils.py
pyminima/tests/: unit_tests.py
pyminima/tests/code_examples/: playground.py  playground_selenium.py
pyminima/ui/: browser.py  button.py  dropdown.py  file_manager.py  image.py  input_field.py  text.py  ui_element.py
settings/: browser_paths.py  settings.py
tests/: unit_tests.py
tests/code-examples/: playground.py
tests/code_examples/: playground.py  playground_selenium.py
ui/: base.py  browser.py  button.py  dropdown.py  file_manager.py  image.py  input_field.py  text.py  ui_element.py
