[project]
name = "minima"
version = "0.1.0"
description = "Automação de framework para cloud"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.22.0",
    " webdriver-manager>=4.0.1",
    "openai>=1.55.0",
    "python-dotenv>=1.1.1",
    "playwright>=1.50.0",
    "openai-whisper>=20240106",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.12.1",
    " playwright-stealth>=1.3.2",
    "pandas>=2.2.2",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"